--- a/Nav_Horz.html
+++ b/Nav_Horz.html
@@ -44,7 +44,7 @@
 		}
 
 		.border {
-			border: 1px solid #cccccc;
+			border: 1px solid #3c533c;
 
 		}
 
@@ -82,17 +82,17 @@
 		function navigate(id) {
 
 			if (id == 'home')
-				window.open("https://www.notion.so/Work-Hub-195145b35d3b43d78848068a4dd44962?pvs=4", '_blank').focus();
+				window.open("https://www.notion.so/Work-Hub-195145b35d3b43d78848068a4dd44962?pvs=4", '_parent').focus();
 			else if (id == "projects")
-				window.open("https://www.notion.so/Projects-d7179406e05141a489604573d9452576?pvs=4", '_blank').focus();
+				window.open("https://www.notion.so/Projects-d7179406e05141a489604573d9452576?pvs=4", '_parent').focus();
 			else if (id == "notes")
-				window.open("https://www.notion.so/Notes-e693246155524052b9037f70d68a1b1a?pvs=4", '_blank').focus();
+				window.open("https://www.notion.so/Notes-e693246155524052b9037f70d68a1b1a?pvs=4", '_parent').focus();
 			else if (id == "resources")
-				window.open("https://www.notion.so/Areas-and-Resources-748647a287934f41a0fd850cd9d45394?pvs=4", '_blank').focus();
+				window.open("https://www.notion.so/Areas-and-Resources-748647a287934f41a0fd850cd9d45394?pvs=4", '_parent').focus();
 			else if (id == "tasks")
-				window.open("https://www.notion.so/Tasks-1d4e2941982944e48cff12d48da1afb6?pvs=4", '_blank').focus();
+				window.open("https://www.notion.so/Tasks-1d4e2941982944e48cff12d48da1afb6?pvs=4", '_parent').focus();
 			else if (id == "archive")
-				window.open("https://www.notion.so/Archive-218818855b5643d89074fe6220c4833c?pvs=4", '_blank').focus();
+				window.open("https://www.notion.so/Archive-218818855b5643d89074fe6220c4833c?pvs=4", '_parent').focus();
 		
 
 		}
