--- a/Nav_Horz.html
+++ b/Nav_Horz.html
@@ -40,7 +40,7 @@
 		}
 
 		.background {
-			background-color: #8da184;
+			background-color: #bcc8c3;
 		}
 
 		.border {
@@ -50,7 +50,7 @@
 
 		.navMenu a:hover {
 
-			color: #a5b5a4;
+			color: #b66b29;
 		}
 	</style>
 </head>
