--- a/Nav_Horz.html
+++ b/Nav_Horz.html
@@ -57,7 +57,7 @@
 
 <body>
 
-	<nav class="navMenu  border">
+	<nav class="navMenu  border background">
 		<a id="home" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-house"></i> Home</a>
 		<a id="projects" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-bars-progress"></i></i> Projects</a>
 		<a id="notes" onclick="navigate(this.id)" href="#"> <i class="fa-regular fa-note-sticky"></i></i> Notes</a>
