--- a/Nav_Horz.html
+++ b/Nav_Horz.html
@@ -32,7 +32,7 @@
 		}
 
 		.navMenu a {
-			color: #272727;
+			color: #3C533C;
 			text-decoration: none;
 			text-transform: uppercase;
 			display: inline-block;
@@ -40,17 +40,17 @@
 		}
 
 		.background {
-			background-color: #bcc8c3;
+			background-color: #F4F6F4;
 		}
 
 		.border {
-			border: 1px solid #3c533c;
+			border: 3px solid #3c533c;
 
 		}
 
 		.navMenu a:hover {
 
-			color: #b66b29;
+			color: #BCC8C3;
 		}
 	</style>
 </head>
