--- a/Nav_Horz.html
+++ b/Nav_Horz.html
@@ -32,7 +32,7 @@
 		}
 
 		.navMenu a {
-			color: #3C533C;
+			color: #8DA184;
 			text-decoration: none;
 			text-transform: uppercase;
 			display: inline-block;
@@ -40,7 +40,7 @@
 		}
 
 		.background {
-			background-color: #F4F6F4;
+			background-color: ##CFE4CF;
 		}
 
 		.border {
