--- a/Nav_Horz.html
+++ b/Nav_Horz.html
@@ -32,7 +32,7 @@
 		}
 
 		.navMenu a {
-			color: #8DA184;
+			color: #3c533c;
 			text-decoration: none;
 			text-transform: uppercase;
 			display: inline-block;
@@ -44,7 +44,7 @@
 		}
 
 		.border {
-			border: 3px solid #3c533c;
+			border: 3px solid #8DA184;
 
 		}
 
@@ -58,12 +58,14 @@
 <body>
 
 	<nav class="navMenu  border background">
-		<a id="home" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-house"></i> Home</a>
-		<a id="projects" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-bars-progress"></i></i> Projects</a>
-		<a id="notes" onclick="navigate(this.id)" href="#"> <i class="fa-regular fa-note-sticky"></i></i> Notes</a>
-		<a id="resources" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-book"></i></i> Resources</a>
-		<a id="tasks" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-list-check"></i> Tasks</a>
-		<a id="archive" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-box-archive"></i></i> Archive</a>
+		<a id="home" onclick="navigate(this.id)" href="#"> <i class="fa-duotone fa-house-chimney"  style="--fa-primary-color: #3c533c; --fa-secondary-color: #8da184;"></i> Home</a>
+		<a id="projects" onclick="navigate(this.id)" href="#"> <i class="fa-duotone fa-chart-gantt" style="--fa-primary-color: #3c533c; --fa-secondary-color: #8da184;"></i></i> Projects</a>
+		<a id="notes" onclick="navigate(this.id)" href="#"> <i class="fa-duotone fa-pencil" style="--fa-primary-color: #3c533c; --fa-secondary-color: #8da184;"></i></i> Notes</a>
+		<a id="tasks" onclick="navigate(this.id)" href="#"> <i class="fa-duotone fa-list-check"  style="--fa-primary-color: #3c533c; --fa-secondary-color: #8da184;"></i> Tasks</a>
+		<a id="incident" onclick="navigate(this.id)" href="#"> <i class="fa-duotone fa-road-barrier" style="--fa-primary-color: #3c533c; --fa-secondary-color: #8da184;"></i></i> Incident Tracking</a>
+		<a id="resources" onclick="navigate(this.id)" href="#"> <i class="fa-duotone fa-school-flag" style="--fa-primary-color: #3c533c; --fa-secondary-color: #8da184;"></i></i> Resources</a>
+		<a id="archive" onclick="navigate(this.id)" href="#"> <i class="fa-duotone fa-box-archive"  style="--fa-primary-color: #3c533c; --fa-secondary-color: #8da184;"></i></i> Archive</a>
+		<a id="personal" onclick="navigate(this.id)" href="#"> <i class="fa-duotone fa-rainbow" style="--fa-primary-color: #3c533c; --fa-secondary-color: #8da184;"></i> Personal Home</a>
 		
 
 
@@ -84,7 +86,7 @@
 			if (id == 'home')
 				window.open("https://www.notion.so/Work-Hub-195145b35d3b43d78848068a4dd44962?pvs=4", '_parent').focus();
 			else if (id == "projects")
-				window.open("https://www.notion.so/Projects-d7179406e05141a489604573d9452576?pvs=4", '_parent').focus();
+				window.open("https://www.notion.so/Notes-e693246155524052b9037f70d68a1b1a?pvs=4", '_parent').focus();
 			else if (id == "notes")
 				window.open("https://www.notion.so/Notes-e693246155524052b9037f70d68a1b1a?pvs=4", '_parent').focus();
 			else if (id == "resources")
@@ -93,8 +95,10 @@
 				window.open("https://www.notion.so/Tasks-1d4e2941982944e48cff12d48da1afb6?pvs=4", '_parent').focus();
 			else if (id == "archive")
 				window.open("https://www.notion.so/Archive-218818855b5643d89074fe6220c4833c?pvs=4", '_parent').focus();
-		
-
+			else if (id == "incident")
+				window.open("https://www.notion.so/Incidents-and-Problems-e001f2248efe45ec9f65d4b0378a7170?pvs=4", '_parent').focus();
+			else if (id == "personal")
+				window.open("https://www.notion.so/Personal-Home-eef9704ea25f4659ada839930033d52f?pvs=4", '_parent').focus();
 		}
 	</script>
 
