--- a/Nav_Horz.html
+++ b/Nav_Horz.html
@@ -32,7 +32,7 @@
 		}
 
 		.navMenu a {
-			color: ##8DA184;
+			color: #8da184;
 			text-decoration: none;
 			text-transform: uppercase;
 			display: inline-block;
@@ -58,14 +58,14 @@
 <body>
 
 	<nav class="navMenu  border background">
-		<a id="home" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-house-chimney"  style="color: #3c533c;"></i> Home</a>
-		<a id="projects" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-chart-gantt" style="color: #3c533c; "></i></i> Projects</a>
-		<a id="notes" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-pencil" style="color: #3c533c;"></i></i> Notes</a>
-		<a id="tasks" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-list-check"  style="-color: #3c533c;"></i> Tasks</a>
-		<a id="incident" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-road-barrier" style="color: #3c533c;"></i></i> Incident Tracking</a>
-		<a id="resources" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-school-flag" style="color: #3c533c;"></i></i> Resources</a>
-		<a id="archive" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-box-archive"  style="color: #3c533c;"></i></i> Archive</a>
-		<a id="personal" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-rainbow" style="color: #3c533c;"></i> Personal Home</a>
+		<a id="home" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-house-chimney" style="color: #8DA184c;"></i> Home</a>
+		<a id="projects" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-bars-progress" style="color: #8DA184; "></i></i> Projects</a>
+		<a id="notes" onclick="navigate(this.id)" href="#"> <i class="fa-regular fa-note-sticky" style="color: #8DA184;"></i></i> Notes</a>
+		<a id="tasks" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-list-check"  style="-color: #8DA184;"></i> Tasks</a>
+		<a id="incident" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-road-barrier" style="color: #8DA184;"></i></i> Incident Tracking</a>
+		<a id="resources" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-school-flag" style="color: #8DA184;"></i></i> Resources</a>
+		<a id="archive" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-box-archive"  style="color: #8DA184;"></i></i> Archive</a>
+		<a id="personal" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-rainbow" style="color: #8DA184;"></i> Personal Home</a>
 		
 
 
