--- a/Navbar_vert.html
+++ b/Navbar_vert.html
@@ -8,9 +8,9 @@
 
 	<!-- Google Font -->
 
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@200;400&display=swap" rel="stylesheet">
 
 	<!-------->
 
@@ -24,7 +24,7 @@
 
 
 		.navMenu {
-			font-family: 'Advent Pro', sans-serif;
+			font-family: 'Raleway', sans-serif;
 			padding: 8px;
 			text-align: center;
 			margin: 7px auto;
@@ -32,7 +32,7 @@
 		}
 
 		.navMenu a {
-			color: #272727;
+			color: #8da184;
 			text-decoration: none;
 			text-transform: uppercase;
 			display: inline-block;
@@ -40,30 +40,32 @@
 		}
 
 		.background {
-			background-color: #ece5f0;
+			background-color: ##CFE4CF;
 		}
 
 		.border {
-			border: 1px solid #cccccc;
+			border: 3px solid #657A60;
 
 		}
 
 		.navMenu a:hover {
 
-			color: #d09c0b;
+			color: #BCC8C3;
 		}
 	</style>
 </head>
 
 <body>
 
-	<nav class="navMenu  border">
-		<a id="home" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-house"></i> Home</a>
-		<a id="projects" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-bars-progress"></i></i> Projects</a>
-		<a id="notes" onclick="navigate(this.id)" href="#"> <i class="fa-regular fa-note-sticky"></i></i> Notes</a>
-		<a id="resources" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-book"></i></i> Resources</a>
-		<a id="tasks" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-list-check"></i> Tasks</a>
-		<a id="archive" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-box-archive"></i></i> Archive</a>
+	<nav class="navMenu  border background">
+		<a id="home" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-house-chimney" style="color: #8DA184c;"></i> Home</a>
+		<a id="projects" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-bars-progress" style="color: #8DA184; "></i></i> Projects</a>
+		<a id="notes" onclick="navigate(this.id)" href="#"> <i class="fa-regular fa-note-sticky" style="color: #8DA184;"></i></i> Notes</a>
+		<a id="tasks" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-list-check"  style="-color: #8DA184;"></i> Tasks</a>
+		<a id="incident" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-road-barrier" style="color: #8DA184;"></i></i> Incident Tracking</a>
+		<a id="resources" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-school-flag" style="color: #8DA184;"></i></i> Resources</a>
+		<a id="archive" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-box-archive"  style="color: #8DA184;"></i></i> Archive</a>
+		<a id="personal" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-rainbow" style="color: #8DA184;"></i> Personal Home</a>
 		
 
 
@@ -82,19 +84,21 @@
 		function navigate(id) {
 
 			if (id == 'home')
-				window.open("https://www.notion.so/Work-Hub-195145b35d3b43d78848068a4dd44962?pvs=4", '_blank').focus();
+				window.open("https://www.notion.so/Work-Hub-195145b35d3b43d78848068a4dd44962?pvs=4", '_parent').focus();
 			else if (id == "projects")
-				window.open("https://www.notion.so/Projects-d7179406e05141a489604573d9452576?pvs=4", '_blank').focus();
+				window.open("https://www.notion.so/Notes-e693246155524052b9037f70d68a1b1a?pvs=4", '_parent').focus();
 			else if (id == "notes")
-				window.open("https://www.notion.so/Notes-e693246155524052b9037f70d68a1b1a?pvs=4", '_blank').focus();
+				window.open("https://www.notion.so/Notes-e693246155524052b9037f70d68a1b1a?pvs=4", '_parent').focus();
 			else if (id == "resources")
-				window.open("https://www.notion.so/Areas-and-Resources-748647a287934f41a0fd850cd9d45394?pvs=4", '_blank').focus();
+				window.open("https://www.notion.so/Areas-and-Resources-748647a287934f41a0fd850cd9d45394?pvs=4", '_parent').focus();
 			else if (id == "tasks")
-				window.open("https://www.notion.so/Tasks-1d4e2941982944e48cff12d48da1afb6?pvs=4", '_blank').focus();
+				window.open("https://www.notion.so/Tasks-1d4e2941982944e48cff12d48da1afb6?pvs=4", '_parent').focus();
 			else if (id == "archive")
-				window.open("https://www.notion.so/Archive-218818855b5643d89074fe6220c4833c?pvs=4", '_blank').focus();
-		
-
+				window.open("https://www.notion.so/Archive-218818855b5643d89074fe6220c4833c?pvs=4", '_parent').focus();
+			else if (id == "incident")
+				window.open("https://www.notion.so/Incidents-and-Problems-e001f2248efe45ec9f65d4b0378a7170?pvs=4", '_parent').focus();
+			else if (id == "personal")
+				window.open("https://www.notion.so/Personal-Home-eef9704ea25f4659ada839930033d52f?pvs=4", '_parent').focus();
 		}
 	</script>
 
