--- a/Navbar_vert.html
+++ b/Navbar_vert.html
@@ -76,7 +76,7 @@
 	<script>
 
 		let direction == "vertical";
-		if (direction == "vertical") {
+		if (direction === "vertical") {
 			document.head.insertAdjacentHTML("beforeend", `<style>.navMenu a {display: block; text-align:left; margin:7px} i{width:15px; margin-right:5px} .navMenu{margin:3px}</style>`)
 		}
 
@@ -88,7 +88,7 @@
 			else if (id == "projects")
 				window.open("https://www.notion.so/Notes-e693246155524052b9037f70d68a1b1a?pvs=4", "_self").focus();
 			else if (id == "notes")
-				window.open("https://www.notion.so/Notes-e693246155524052b9037f70d68a1b1a?pvs=4", "_self"').focus();
+				window.open("https://www.notion.so/Notes-e693246155524052b9037f70d68a1b1a?pvs=4", "_self").focus();
 			else if (id == "resources")
 				window.open("https://www.notion.so/Areas-and-Resources-748647a287934f41a0fd850cd9d45394?pvs=4", "_self").focus();
 			else if (id == "tasks")
