--- a/Navbar_vert.html
+++ b/Navbar_vert.html
@@ -84,21 +84,21 @@
 		function navigate(id) {
 
 			if (id == 'home')
-				window.open("https://www.notion.so/Work-Hub-195145b35d3b43d78848068a4dd44962?pvs=4", "_self").focus();
+				window.open("https://www.notion.so/Work-Hub-195145b35d3b43d78848068a4dd44962?pvs=4", "_parent").focus();
 			else if (id == "projects")
-				window.open("https://www.notion.so/Notes-e693246155524052b9037f70d68a1b1a?pvs=4", "_self").focus();
+				window.open("https://www.notion.so/Notes-e693246155524052b9037f70d68a1b1a?pvs=4", "_parent").focus();
 			else if (id == "notes")
-				window.open("https://www.notion.so/Notes-e693246155524052b9037f70d68a1b1a?pvs=4", "_self").focus();
+				window.open("https://www.notion.so/Notes-e693246155524052b9037f70d68a1b1a?pvs=4", "_parent").focus();
 			else if (id == "resources")
-				window.open("https://www.notion.so/Areas-and-Resources-748647a287934f41a0fd850cd9d45394?pvs=4", "_self").focus();
+				window.open("https://www.notion.so/Areas-and-Resources-748647a287934f41a0fd850cd9d45394?pvs=4", "_parent").focus();
 			else if (id == "tasks")
-				window.open("https://www.notion.so/Tasks-1d4e2941982944e48cff12d48da1afb6?pvs=4", "_self").focus();
+				window.open("https://www.notion.so/Tasks-1d4e2941982944e48cff12d48da1afb6?pvs=4", "_parent").focus();
 			else if (id == "archive")
-				window.open("https://www.notion.so/Archive-218818855b5643d89074fe6220c4833c?pvs=4", "_self").focus();
+				window.open("https://www.notion.so/Archive-218818855b5643d89074fe6220c4833c?pvs=4", "_parent").focus();
 			else if (id == "incident")
-				window.open("https://www.notion.so/Incidents-and-Problems-e001f2248efe45ec9f65d4b0378a7170?pvs=4", "_self").focus();
+				window.open("https://www.notion.so/Incidents-and-Problems-e001f2248efe45ec9f65d4b0378a7170?pvs=4", "_parent").focus();
 			else if (id == "personal")
-				window.open("https://www.notion.so/Personal-Home-eef9704ea25f4659ada839930033d52f?pvs=4", "_self").focus();
+				window.open("https://www.notion.so/Personal-Home-eef9704ea25f4659ada839930033d52f?pvs=4", "_parent").focus();
 		}
 	</script>
 
