--- a/Nav_Horz.html
+++ b/Nav_Horz.html
@@ -88,7 +88,7 @@
 			else if (id == "projects")
 				window.open("https://www.notion.so/Notes-e693246155524052b9037f70d68a1b1a?pvs=4", "_parent").focus();
 			else if (id == "notes")
-				window.open("https://www.notion.so/Notes-e693246155524052b9037f70d68a1b1a?pvs=4", "_parent"').focus();
+				window.open("https://www.notion.so/Notes-e693246155524052b9037f70d68a1b1a?pvs=4", "_parent").focus();
 			else if (id == "resources")
 				window.open("https://www.notion.so/Areas-and-Resources-748647a287934f41a0fd850cd9d45394?pvs=4", "_parent").focus();
 			else if (id == "tasks")
