--- a/Personal_Nav_bar.html
+++ b/Personal_Nav_bar.html
@@ -61,8 +61,8 @@
 		<a id="home" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-house-chimney" style="color: #fcae82;"></i></i> Home</a>
   		<a id="goals" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-trophy" style="color: #fcae82;"></i></i> Goals</a>
 		<a id="weight" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-weight-scale" style="color: #fcae82; "></i></i> Weight Tracking</a>
-		<a id="workouts" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-person-running" style="-color: #fcae82;"></i></i> Workouts</a>
-		<a id="week" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-calendar-week" style="-color: #fcae82;"></i></i> Weekly Tracking</a>
+		<a id="workouts" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-person-running" style="color: #fcae82;"></i></i> Workouts</a>
+		<a id="week" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-calendar-week" style="color: #fcae82;"></i></i> Weekly Tracking</a>
 		<a id="meals" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-utensils" style="color: #fcae82;"></i></i> Meal Planning</a>
 	
 		
