--- a/CreativeNav.html
+++ b/CreativeNav.html
@@ -4,7 +4,7 @@
 <head>
 
 	<!-- Flaticon -->
-	<link rel="stylesheet" type="text/css" href="fonts/flaticon_notion.css">
+	<link rel="stylesheet" type="text/css" href="flaticon_notion.css">
 
 	<!-- Google Font -->
 
