--- a/CreativeNav.html
+++ b/CreativeNav.html
@@ -4,7 +4,7 @@
 <head>
 
 	<!-- Flaticon -->
-	<link rel="stylesheet" type="text/css" href="flaticon_notion.css">
+	<link rel="stylesheet" type="text/css" href="fonts/flaticon_notion.css">
 
 	<!-- Google Font -->
 
@@ -35,7 +35,7 @@
 		}
 
 		.navMenu a {
-			color: #390040;
+			color: #272727;
 			text-decoration: none;
 			text-transform: uppercase;
 			display: inline-block;
@@ -47,31 +47,32 @@
 		}
 
 		.border {
-			border: 1px solid #154745;
+			border: 1px solid #cccccc;
 
 		}
 
 		.navMenu a:hover {
-			background-color: #D6EFFF;
-			color: #F5B8CA;
+			background-color: #04AA6D;
+			color: #d09c0b;
 		}
 		.active {
 			background-color: #154745;
 		}
 		
+}
 	</style>
 </head>
 
 <body>
 
 	<nav class="navMenu  border">
-		<a id="home" onclick="navigate(this.id)" href="#"> <i class="flaticon-home"></i> Home</a>
-		<a id="sewing" onclick="navigate(this.id)" href="#"> <i class="flaticon-sewing-machine"></i> Sewing</a>
-		<a id="hproj" onclick="navigate(this.id)" href="#"> <i class="flaticon-table-saw"></i> Home Projects</a>
-		<a id="needlework" onclick="navigate(this.id)" href="#"> <i class="flaticon-embroidery"></i> Needlework</a>
-		<a id="capsule" onclick="navigate(this.id)" href="#"> <i class="flaticon-dress-1"></i> Capsule Wardrobe</a>
-		<a id="book" onclick="navigate(this.id)" href="#"> <i class="flaticon-books"></i> Book Nook</a>
-		<a id="watch" onclick="navigate(this.id)" href="#"> <i class="flaticon-film-reel"></i> Movies & TV</a>
+		<a id="home" onclick="navigate(this.id)" href="#"> <i class="fi flaticon-home"></i> Home</a>
+		<a id="sewing" onclick="navigate(this.id)" href="#"> <i class="fi flaticon-sewing-machine"></i> Sewing</a>
+		<a id="hproj" onclick="navigate(this.id)" href="#"> <i class="fi flaticon-table-saw"></i> Home Projects</a>
+		<a id="needlework" onclick="navigate(this.id)" href="#"> <i class="fi flaticon-embroidery"></i> Needlework</a>
+		<a id="capsule" onclick="navigate(this.id)" href="#"> <i class="fi flaticon-dress-1"></i> Capsule Wardrobe</a>
+		<a id="book" onclick="navigate(this.id)" href="#"> <i class="fi flaticon-books"></i> Book Nook</a>
+		<a id="watch" onclick="navigate(this.id)" href="#"> <i class="fi flaticon-film-reel"></i> Movies & TV</a>
 		
 
 	</nav>
