--- a/CreativeNav.html
+++ b/CreativeNav.html
@@ -35,7 +35,7 @@
 		}
 
 		.navMenu a {
-			color: #272727;
+			color: #390040;
 			text-decoration: none;
 			text-transform: uppercase;
 			display: inline-block;
@@ -43,17 +43,17 @@
 		}
 
 		.background {
-			background-color: #ece5f0;
+			background-color: #D6EFFF;
 		}
 
 		.border {
-			border: 1px solid #cccccc;
+			border: 1px solid #154745;
 
 		}
 
 		.navMenu a:hover {
-			background-color: #04AA6D;
-			color: #d09c0b;
+			background-color: #2F9D98;
+			color: #F5B8CA;
 		}
 		.active {
 			background-color: #154745;
