--- a/CreativeNav.html
+++ b/CreativeNav.html
@@ -35,7 +35,7 @@
 		}
 
 		.navMenu a {
-			color: #390040;
+			color: #F0AF3C;
 			text-decoration: none;
 			text-transform: uppercase;
 			display: inline-block;
