--- a/CreativeNav.html
+++ b/CreativeNav.html
@@ -35,7 +35,7 @@
 		}
 
 		.navMenu a {
-			color: #F0AF3C;
+			color: #390040;
 			text-decoration: none;
 			text-transform: uppercase;
 			display: inline-block;
@@ -43,7 +43,7 @@
 		}
 
 		.background {
-			background-color: #F0AF3C;
+			background-color: #D6EFFF;
 		}
 
 		.border {
@@ -55,7 +55,7 @@
 			background-color: #154745;
 			color: #F5B8CA;
 		}
-		.active {
+		a:active {
 			background-color: #154745;
 		}
 		
