--- a/CreativeNav.html
+++ b/CreativeNav.html
@@ -36,14 +36,11 @@
 
 		.navMenu a {
 			color: #390040;
+			background-color: #D6EFFF;
 			text-decoration: none;
 			text-transform: uppercase;
 			display: inline-block;
 			padding: 6px;
-		}
-
-		.background {
-			background-color: #D6EFFF;
 		}
 
 		.border {
@@ -52,11 +49,12 @@
 		}
 
 		.navMenu a:hover {
-			background-color: #154745;
-			color: #F5B8CA;
+			background-color: #F5B8CA;
+			color: #390040 ;
 		}
-		a:active {
+		.navMenu a:active {
 			background-color: #154745;
+			color: #F0AF3C
 		}
 		
 }
