--- a/CreativeNav.html
+++ b/CreativeNav.html
@@ -66,7 +66,7 @@
 	<nav class="navMenu  border">
 		<a id="home" onclick="navigate(this.id)" href="#"> <i class="flaticon-home"></i> Home</a>
 		<a id="sewing" onclick="navigate(this.id)" href="#"> <i class="flaticon-sewing-machine"></i> Sewing</a>
-		<a id="hproj" onclick="navigate(this.id)" href="#"> <i class="flaticon-table-saw"></i> Home Projects</a>
+		<a id="hproj" onclick="navigate(this.id)" href="#"> <i class="flaticon-circular-saw"></i> Home Projects</a>
 		<a id="needlework" onclick="navigate(this.id)" href="#"> <i class="flaticon-embroidery"></i> Needlework</a>
 		<a id="capsule" onclick="navigate(this.id)" href="#"> <i class="flaticon-dress-1"></i> Capsule Wardrobe</a>
 		<a id="book" onclick="navigate(this.id)" href="#"> <i class="flaticon-books"></i> Book Nook</a>
