--- a/CreativeNav.html
+++ b/CreativeNav.html
@@ -40,7 +40,8 @@
 			text-decoration: none;
 			text-transform: uppercase;
 			display: inline-block;
-			padding: 6px;
+			*padding: 6px;*/
+			float: left;
 		}
 
 		.border {
