--- a/CreativeNav.html
+++ b/CreativeNav.html
@@ -36,7 +36,7 @@
 
 		.navMenu a {
 			color: #390040;
-			background-color: #D6EFFF;
+			background-color: #FFFFFF;
 			text-decoration: none;
 			text-transform: uppercase;
 			display: inline-block;
