--- a/CreativeNav.html
+++ b/CreativeNav.html
@@ -32,6 +32,7 @@
 			text-align: center;
 			margin: 7px auto;
 			width: fit-content;
+			float: Left;
 		}
 
 		.navMenu a {
@@ -45,6 +46,7 @@
 
 		.border {
 			border: 2px solid #154745;
+			border-radius: 4px;
 
 		}
 
