--- a/CreativeNav.html
+++ b/CreativeNav.html
@@ -53,7 +53,7 @@
 			background-color: #F5B8CA;
 			color: #390040 ;
 		}
-		.active {
+		.active a {
 			background-color: #154745;
 			color: #F0AF3C
 			border-radius: 15px 50px;
