--- a/CreativeNav.html
+++ b/CreativeNav.html
@@ -44,6 +44,10 @@
 			padding: 12px;
 		}
 
+		.navMenu a.active {
+			background-color: #154745;
+			color: #F0AF3C
+			}
 		.border {
 			border: 2px solid #154745;
 			border-radius: 4px;
@@ -53,12 +57,7 @@
 			background-color: #F5B8CA;
 			color: #390040 ;
 		}
-		.navBar a.active {
-			background-color: #154745;
-			color: #F0AF3C
-			border-radius: 15px 50px;
-		}
-		
+				
 }
 	</style>
 </head>
