--- a/CreativeNav.html
+++ b/CreativeNav.html
@@ -57,7 +57,9 @@
 			background-color: #F5B8CA;
 			color: #390040 ;
 		}
-				
+		.navMenu a.active {
+			background-color: #154745;
+		}		
 }
 	</style>
 </head>
@@ -65,14 +67,14 @@
 <body>
 
 	<nav class="navMenu  border">
-		<a id="home" onclick="navigate(this.id)" href="#"> <i class="flaticon-home"></i> Home</a>
-		<a id="sewing" onclick="navigate(this.id)" href="#"> <i class="flaticon-sewing-machine"></i> Sewing</a>
-		<a id="hproj" onclick="navigate(this.id)" href="#"> <i class="flaticon-hand-saw"></i> Home Projects</a>
-		<a id="needlework" onclick="navigate(this.id)" href="#"> <i class="flaticon-embroidery"></i> Needlework</a>
-		<a id="capsule" onclick="navigate(this.id)" href="#"> <i class="flaticon-dress-1"></i> Capsule Wardrobe</a>
-		<a id="book" onclick="navigate(this.id)" href="#"> <i class="flaticon-books"></i> Book Nook</a>
-		<a id="watch" onclick="navigate(this.id)" href="#"> <i class="flaticon-film-reel"></i> Movies & TV</a>
-		
+		<a id="home" onclick="navigate(this.id); active()" href="#"> <i class="fi flaticon-home"></i> Home</a>
+		<a id="sewing" onclick="navigate(this.id); active()" href="#"> <i class="fi flaticon-sewing-machine"></i> Sewing</a>
+		<a id="hproj" onclick="navigate(this.id); active()" href="#"> <i class="fi flaticon-table-saw"></i> Home Projects</a>
+		<a id="needlework" onclick="navigate(this.id); active()" href="#"> <i class="fi flaticon-embroidery"></i> Needlework</a>
+		<a id="capsule" onclick="navigate(this.id); active()" href="#"> <i class="fi flaticon-dress-1"></i> Capsule Wardrobe</a>
+		<a id="book" onclick="navigate(this.id); active()" href="#"> <i class="fi flaticon-books"></i> Book Nook</a>
+		<a id="watch" onclick="navigate(this.id); active()" href="#"> <i class="fi flaticon-film-reel"></i> Movies & TV</a>
+			
 
 	</nav>
 
@@ -103,7 +105,16 @@
 			
 		}
 	</script>
+	<script>
+		function active() {
 
+			var url = window.location.href;
+			$('navMenu').find('active').removeClass('active');
+			$('navMenu a').filter(function(){
+			return this.href == url;
+			}).addClass('active');
+				}
+	</script>
 
 </body>
 
