--- a/CreativeNav.html
+++ b/CreativeNav.html
@@ -37,7 +37,7 @@
 
 		.navMenu a {
 			color: #390040;
-			background-color: #FFFFFF;
+			background-color: #FBE2EA;
 			text-decoration: none;
 			text-transform: uppercase;
 			display: inline-block;
