--- a/CreativeNav.html
+++ b/CreativeNav.html
@@ -64,13 +64,13 @@
 <body>
 
 	<nav class="navMenu  border">
-		<a id="home" onclick="navigate(this.id); active()" href="#"> <i class="fi flaticon-home"></i> Home</a>
-		<a id="sewing" onclick="navigate(this.id); active()" href="#"> <i class="fi flaticon-sewing-machine"></i> Sewing</a>
-		<a id="hproj" onclick="navigate(this.id); active()" href="#"> <i class="fi flaticon-table-saw"></i> Home Projects</a>
-		<a id="needlework" onclick="navigate(this.id); active()" href="#"> <i class="fi flaticon-embroidery"></i> Needlework</a>
-		<a id="capsule" onclick="navigate(this.id); active()" href="#"> <i class="fi flaticon-dress-1"></i> Capsule Wardrobe</a>
-		<a id="book" onclick="navigate(this.id); active()" href="#"> <i class="fi flaticon-books"></i> Book Nook</a>
-		<a id="watch" onclick="navigate(this.id); active()" href="#"> <i class="fi flaticon-film-reel"></i> Movies & TV</a>
+		<a id="home" onclick="navigate(this.id); active()" href="#"> <i class="flaticon-home"></i> Home</a>
+		<a id="sewing" onclick="navigate(this.id); active()" href="#"> <i class="flaticon-sewing-machine"></i> Sewing</a>
+		<a id="hproj" onclick="navigate(this.id); active()" href="#"> <i class="flaticon-table-saw"></i> Home Projects</a>
+		<a id="needlework" onclick="navigate(this.id); active()" href="#"> <i class="flaticon-embroidery"></i> Needlework</a>
+		<a id="capsule" onclick="navigate(this.id); active()" href="#"> <i class="flaticon-dress-1"></i> Capsule Wardrobe</a>
+		<a id="book" onclick="navigate(this.id); active()" href="#"> <i class="flaticon-books"></i> Book Nook</a>
+		<a id="watch" onclick="navigate(this.id); active()" href="#"> <i class="flaticon-film-reel"></i> Movies & TV</a>
 			
 
 	</nav>
