--- a/CreativeNav.html
+++ b/CreativeNav.html
@@ -88,17 +88,17 @@
 			if (id == 'home')
 				window.open("https://www.notion.so/Creative-Center-230480b839738021a3f6fd180a8f6553?source=copy_link", '_parent').focus();
 			else if (id == "sewing")
-				window.open("https://www.notion.so/Sewing-230480b83973802fbc17e24c03078011?source=copy_link", '_parent').focus();
+				window.open("https://www.notion.so/Sewing-Hub-230480b83973802fbc17e24c03078011", '_parent').focus();
 			else if (id == "hproj")
-				window.open("https://www.notion.so/Needlework-230480b839738076ad8bc0a5d8f4d30a?source=copy_link", '_parent').focus();
+				window.open("https://www.notion.so/Home-Projects-230480b8397380218f54f813bc90ac62", '_parent').focus();
 			else if (id == "needlework")
-				window.open("https://www.notion.so/Needlework-230480b839738076ad8bc0a5d8f4d30a?source=copy_link", '_parent').focus();
+				window.open("https://www.notion.so/Needlework-and-Fiber-Arts-230480b839738076ad8bc0a5d8f4d30a", '_parent').focus();
 			else if (id == "capsule")
-				window.open("https://www.notion.so/Capsule-Wardrobe-230480b8397380069343e2f4056ae0dd?source=copy_link", '_parent').focus();
+				window.open("https://www.notion.so/Capsule-Wardrobe-230480b8397380069343e2f4056ae0dd", '_parent').focus();
 			else if (id == "book")
-				window.open("https://www.notion.so/Book-Nook-232480b839738004ad65defd4006e45d?source=copy_link", '_parent').focus();
+				window.open("https://www.notion.so/Book-Nook-232480b839738004ad65defd4006e45d", '_parent').focus();
 			else if (id == "watch")
-				window.open("https://www.notion.so/Movies-and-TV-232480b83973800ead63d376233ea786?source=copy_link", '_parent').focus();
+				window.open("https://www.notion.so/Movies-and-TV-232480b83973800ead63d376233ea786", '_parent').focus();
 			
 		}
 
