--- a/SubNav/SewingNav.html
+++ b/SubNav/SewingNav.html
@@ -36,8 +36,8 @@
 		}
 
 		.navMenu a {
-			color: #390040;
-			background-color: #FFFFFF;
+			color: #f5b8ca;
+			background-color: #154745;
 			text-decoration: none;
 			text-transform: uppercase;
 			display: inline-block;
@@ -50,11 +50,11 @@
 			}
 
 		.navMenu a:hover {
-			background-color: #F5B8CA;
+			background-color: #2F9D98;
 			color: #390040 ;
 		}
 		.navMenu a.active {
-			background-color: #154745;
+			background-color: #2F9D98;
 			color: #F0AF3C
 		}		
 }
