--- a/SubNav/SewingNav.html
+++ b/SubNav/SewingNav.html
@@ -51,7 +51,7 @@
 
 		.navMenu a:hover {
 			background-color: #2F9D98;
-			color: #390040 ;
+			color: #D6EFFF ;
 		}
 		.navMenu a.active {
 			background-color: #2F9D98;
