--- a/CreativeNav.html
+++ b/CreativeNav.html
@@ -86,7 +86,7 @@
 		function navigate(id) {
 
 			if (id == 'home')
-				window.open("https://www.notion.so/Creative-Center-230480b839738021a3f6fd180a8f6553?source=copy_link", '_parent').focus();
+				window.open("https://www.notion.so/Creative-Center-230480b839738021a3f6fd180a8f6553", '_parent').focus();
 			else if (id == "sewing")
 				window.open("https://www.notion.so/Sewing-Hub-230480b83973802fbc17e24c03078011", '_parent').focus();
 			else if (id == "hproj")
