--- a/SubNav/SewingNav.html
+++ b/SubNav/SewingNav.html
@@ -30,7 +30,7 @@
 			font-style: normal;
 			padding: 2px;
 			text-align: center;
-			margin: 0px auto;
+			margin: 2px auto;
 			width: fit-content;
 			
 		}
@@ -65,7 +65,7 @@
 
 	<nav class="navMenu  border">
 		<a id="home" onclick="navigate(this.id); active()" href="#"> <i class="flaticon-home"></i> Home</a>
-		<a id="sewhome" onclick="navigate(this.id); active()" href="#"> <i class="flaticon-sewing-machine"></i> Sewing Home</a>
+		<a id="sewhome" onclick="navigate(this.id); active()" href="#"> <i class="flaticon-sewing-machine-1"></i> Sewing Home</a>
 		<a id="project" onclick="navigate(this.id); active()" href="#"> <i class="flaticon-hand-saw"></i> Projects</a>
 		<a id="patterns" onclick="navigate(this.id); active()" href="#"> <i class="flaticon-embroidery"></i> Patterns</a>
 		<a id="fabric" onclick="navigate(this.id); active()" href="#"> <i class="flaticon-dress-1"></i> Fabric Stash</a>
@@ -77,7 +77,7 @@
 		
 		let direction = "horizontal";
 		if (direction === "vertical") {
-			document.head.insertAdjacentHTML("beforeend", `<style>.navMenu a {display: block; text-align:left; margin:7px} i{width:15px; margin-right:5px} .navMenu{margin:3px}</style>`)
+			document.head.insertAdjacentHTML("beforeend", `<style>.navMenu a {display: block; text-align:left; margin:2px} i{width:15px; margin-right:5px} .navMenu{margin:3px}</style>`)
 		}
 
 
