--- a/SubNav/SewingNav.html
+++ b/SubNav/SewingNav.html
@@ -64,7 +64,7 @@
 <body>
 
 	<nav class="navMenu  border">
-		<a id="home" onclick="navigate(this.id); active()" href="#"> <i class="flaticon-home"></i> Home</a>
+		<a id="home" onclick="navigate(this.id); active()" href="#"> <i class="flaticon-home"></i> Creative Center</a>
 		<a id="sewhome" onclick="navigate(this.id); active()" href="#"> <i class="flaticon-sewing-machine-1"></i> Sewing Home</a>
 		<a id="project" onclick="navigate(this.id); active()" href="#"> <i class="flaticon-hand-saw"></i> Projects</a>
 		<a id="patterns" onclick="navigate(this.id); active()" href="#"> <i class="flaticon-embroidery"></i> Patterns</a>
@@ -77,7 +77,7 @@
 		
 		let direction = "horizontal";
 		if (direction === "vertical") {
-			document.head.insertAdjacentHTML("beforeend", `<style>.navMenu a {display: block; text-align:left; margin:2px} i{width:15px; margin-right:5px} .navMenu{margin:3px}</style>`)
+			document.head.insertAdjacentHTML("beforeend", `<style>.navMenu a {display: block; text-align:left; margin:2px} i{width:15px; margin-right:2x} .navMenu{margin:1px}</style>`)
 		}
 
 
